chore: migrate build to Java 21 baseline